New block infoAboutMe

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                  <div class="content">
                     <span>Будь сильным, будь в форме</span>
                     <h3>Открой для себя мир фитнеса.</h3>
-                    <a href="#" class="btn">Начать заниматься</a>
+                    <a href="#register" class="btn">Начать заниматься</a>
                 </div>
             </div>
 
@@ -491,8 +491,8 @@
 
         <div class="box">
             <h3>Наши контакты</h3>
-            <p> <i class="fas fa-phone"></i> +8-951-737-6605 </p>
-            <p> <i class="fas fa-envelope"></i> sagagarm8357@gmail.com </p>
+            <p> <i class="fas fa-phone"></i>+8-951-737-6605</p>
+            <p> <i class="fas fa-envelope"></i>sagagarm8357@gmail.com</p>
             <p> <i class="fas fa-map"></i><a href="https://maps.app.goo.gl/JtTacFb63ER6Cyjq6">г. Вологда, ул. Городской Вал, д. 26</a></p>
             <div class="share">
                 <a href="https://vk.com/novinovi" class="fab fa-vk"></a>
@@ -526,11 +526,10 @@
 <section class="developerInfo">
     <div class="developer-info">
         <h2>О разработчике</h2>
-        <img src="iam.jpg" alt="Фото разработчика">
         <p><span>Имя:</span> Гарманов Александр</p>
         <p><span>Должность:</span> Веб-разработчик</p>
         <p><span>Почта:</span> sagagarm8357@gmail.com</p>
-        <p><span>Телефон:</span> +7 (951) 737 6605</p>
+        <p><span>Телефон:</span> +7(951)7376605</p>
     </div>
 </section>
 
@@ -541,7 +540,6 @@
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-<!-- custom js file link  -->
 <script src="js/script.js"></script>
 <script src="popup.js"></script>
 
