New dop info for me

--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
         <p><span>Должность:</span> Веб-разработчик</p>
         <p><span>Почта:</span> sagagarm8357@gmail.com</p>
         <p><span>Телефон:</span> +7(951)7376605</p>
+        <p><span>ВК:</span><a href="https://vk.com/novinovi"> novinovi</a></p> 
     </div>
 </section>
 
